--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,34 @@
 # require at least cmake v3.0.0, so we can use CTest
 cmake_minimum_required(VERSION 3.13)
-enable_testing()
+
 # compile flags: -Wall "enable all compiler warnings"
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall /wd4514 /wd4668 /wd4062 /wd5267 /wd4061 /wd5264 /wd4820 /wd5038 /wd5045 /wd4577")
+# CMAKE_CXX_FLAGS is a preexisting magic supervariable that tells the compiler what compile options it should use
+
+#set(CMAKE_SYSTEM_NAME "APPLE")
+
+if(WIN32)
+    # Windows-specific compile settings
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall /wd4514 /wd4668 /wd4062 /wd5267 /wd4061 /wd5264 /wd4820 /wd5038 /wd5045 /wd4577")
+elseif(APPLE)
+    if(IOS)
+        # ios-specific compile settings
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++ -Wall -Wextra -Wpedantic -Wno-nonportable-include-path -Wno-unused-const-variable -miphoneos-version-min=8.0")
+        set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS16.2.sdk")
+        set(CMAKE_OSX_ARCHITECTURES "arm64")
+    else()
+        # Mac-specific compile settings
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++ -Wall -Wextra -Wpedantic -Wno-nonportable-include-path -Wno-unused-const-variable")
+        set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk")
+    endif()
+endif()
+
+
 # c++ language version level: c++11
 set(CMAKE_CXX_STANDARD 11)
 # cmake project name: "libsat"
 project(libsat VERSION 0.1.0)
+
+include_directories(src)
 
 # add CTest capability
 include(CTest)
@@ -15,18 +37,31 @@ include(CTest)
 math(EXPR platform_bits "${CMAKE_SIZEOF_VOID_P} * 8")
 set(platform_dir ${CMAKE_SYSTEM_NAME}${platform_bits}-${CMAKE_CXX_COMPILER_ID}${CMAKE_CXX_COMPILER_VERSION})
 
-foreach(config DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
+# Set the output directory for each build configuration
 
-    foreach(var CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${config} CMAKE_LIBRARY_OUTPUT_DIRECTORY_${config} CMAKE_RUNTIME_OUTPUT_DIRECTORY_${config})
+foreach(config _DEBUG _RELEASE _RELWITHDEBINFO _MINSIZEREL "")
+
+    foreach(var CMAKE_ARCHIVE_OUTPUT_DIRECTORY${config} CMAKE_LIBRARY_OUTPUT_DIRECTORY${config} CMAKE_RUNTIME_OUTPUT_DIRECTORY${config})
         #lib\win10-x86
-        set(${var} "${CMAKE_BINARY_DIR}/../lib/win-x64")
+        if(WIN32)
+            set(${var} "${CMAKE_BINARY_DIR}/../lib/win-x64")
+        elseif(APPLE)
+            if(IOS)
+                set(${var} "${CMAKE_BINARY_DIR}/../lib/ios")
+            else()
+                set(${var} "${CMAKE_BINARY_DIR}/../lib/macos")
+            endif()
+        endif()
         string(TOLOWER "${${var}}" ${var})
+        #MESSAGE(${var})
+        #MESSAGE(${${var}})
     endforeach()
 
 endforeach()
 
-MESSAGE (STATUS "${CMAKE_BINARY_DIR}/../lib/win-x64: " ${CMAKE_BINARY_DIR}/../lib/win-x64)
 
+
+# Set the CPACK variables
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
@@ -39,11 +74,19 @@ endif()
 # Organizes project into folders to reduce clutter
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
+# Include, build, and read Makefiles from all subdirectories
 add_subdirectory(src build)
-add_subdirectory(tests)
+if(NOT IOS)
+    add_subdirectory(app)
+    # enable testing
+    enable_testing()
+    add_subdirectory(tests)
 
-## cmake compile
-# cmake -G "Visual Studio 17 2022" -S . -B ./build
 
-## cmake clean
-# cmake --build ./build/ --target clean
+# Tell cmake how to place the output executable in a tidy place a client can find it
+install(TARGETS app355 DESTINATION out/app)
+
+# Tell cmake how to place the output executable in a tidy place a client can find it
+install(TARGETS unit_tests DESTINATION out/tests)
+
+endif()
