--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "program": "${workspaceFolder}/lib/win-x64/app355",  
             "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"], 
             "cwd": "${workspaceFolder}/lib/win-x64", // Change this to the directory of your executable
-            "stopAtEntry": false // Set to true to stop program execution at the first line of code
+            "stopAtEntry": true // Set to true to stop program execution at the first line of code
         },
 
         {
