--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,18 @@ target_include_directories(libsat355 AFTER PRIVATE ../cppOrbitTools/orbitTools/c
 # Tell cmake how to place the output executable in a tidy place a client can find it
 install(TARGETS libsat355 DESTINATION lib)
 
+if(WIN32)
+  file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/libsat355.h DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+elseif(APPLE)
+  if(IOS)
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/libsat355.h DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
+    #file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/module.modulemap DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
+  else()
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/libsat355.h DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+    #file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/module.modulemap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+  endif()
+endif()
+
 # Create a customized structure to hold header files when viewed through the IDE
 # Header files will appear in an IDE folder called "Header Files"
 source_group(
