--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "type": "cppvsdbg", // Use the microsoft debugger 
             "request": "launch",
 
-            "program": "${workspaceFolder}/lib/win-x64/app355",  
+            "program": "${workspaceFolder}/lib/win-x64/app355-cpp",  
             "args": ["${workspaceFolder}/tests/StarLinkTLE.txt"], 
             "cwd": "${workspaceFolder}/lib/win-x64", // Change this to the directory of your executable
             "stopAtEntry": true // Set to true to stop program execution at the first line of code
@@ -34,13 +34,13 @@
             "request": "launch",
             
             "windows": {
-                "program": "${workspaceFolder}/lib/win-x64/app355",  
+                "program": "${workspaceFolder}/lib/win-x64/app355-cpp",  
                 "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/win-x64", 
                 "MIMode": "gdb"
             },
             "osx": {
-                "program": "${workspaceFolder}/lib/macos/app355",  
+                "program": "${workspaceFolder}/lib/macos/app355-swift",  
                 "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/macos",
                 "MIMode": "lldb"
