--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,7 +23,7 @@
             "label": "regenerate/build",
             "type": "shell",
             "windows": { "command": "cmake -S . -B ./build && cmake --build ./build"},
-            "osx": { "command": "cmake -DIOS=OFF -DCMAKE_SYSTEM_NAME=Darwin -DCMAKE_BUILD_TYPE=Debug -S . -B ./build && cmake --build ./build" },
+            "osx": { "command": "cmake -G \"Xcode\" -DIOS=OFF -DCMAKE_SYSTEM_NAME=Darwin -DCMAKE_BUILD_TYPE=Debug -S . -B ./build && cmake --build ./build" },
             "group": {
                 "kind": "build",
                 "isDefault": false
