--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,17 +8,23 @@ cmake_minimum_required(VERSION 3.13)
 
 if(WIN32)
     # Windows-specific compile settings
+    set(LIBSAT355_LANGUAGES CXX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall /wd4514 /wd4668 /wd4062 /wd5267 /wd4061 /wd5264 /wd4820 /wd5038 /wd5045 /wd4577")
 elseif(APPLE)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -cxx-interoperability-mode=default -Wall -Wextra -Wpedantic -Wno-nonportable-include-path -Wno-unused-const-variable")
+    # Settings common to both Mac and iOS
+    set(LIBSAT355_LANGUAGES Swift CXX)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -Wall -Wextra -Wpedantic -Wno-nonportable-include-path -Wno-unused-const-variable")
+    set(SWIFT_FLAGS "${SWIFT_FLAGS}  -cxx-interoperability-mode=default")
     if(IOS)
         # ios-specific compile settings
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -miphoneos-version-min=8.0")
+        set(SWIFT_FLAGS "${SWIFT_FLAGS} ")
         set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS16.2.sdk")
         set(CMAKE_OSX_ARCHITECTURES "arm64")
     else()
         # Mac-specific compile settings
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ")
+        set(SWIFT_FLAGS "${SWIFT_FLAGS} ")
         set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk")
     endif()
 endif()
@@ -26,9 +32,8 @@ endif()
 # c++ language version level: c++17
 set(CMAKE_CXX_STANDARD 17)
 # cmake project name: "libsat"
-project(libsat VERSION 0.1.0)
 
-include_directories(src)
+project(libsat VERSION 0.1.0 LANGUAGES ${LIBSAT355_LANGUAGES})
 
 # add CTest capability
 include(CTest)
@@ -74,16 +79,20 @@ endif()
 # Organizes project into folders to reduce clutter
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-# Include, build, and read Makefiles from all subdirectories
+# Adds /src to the header search path, so we can #include labsat355.h
+include_directories(src)
+# Invoke the build CMakeLists.txt instructions for libsat355
 add_subdirectory(src build)
 
 # Tell cmake how to place the output executable in a tidy place a client can find it
 if(NOT APPLE)
+    # Invoke the CMakeLists.txt build instructions for app355-cpp
     add_subdirectory(app-cpp)
-    install(TARGETS app355 DESTINATION out/app-cpp)
+    install(TARGETS app355-cpp DESTINATION out/app-cpp)
 else()
+    # Invoke the CMakeLists.txt build instructions for app-swift 
     add_subdirectory(app-swift)
-    install(TARGETS app355 DESTINATION out/app-swift)
+    install(TARGETS app355-swift DESTINATION out/app-swift)
 endif()
 
 # Tell cmake how to place the output executable in a tidy place a client can find it
