--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,27 +8,33 @@ cmake_minimum_required(VERSION 3.13)
 
 if(WIN32)
     # Windows-specific compile settings
+    set(LIBSAT355_LANGUAGES CXX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall /wd4514 /wd4668 /wd4062 /wd5267 /wd4061 /wd5264 /wd4820 /wd5038 /wd5045 /wd4577")
 elseif(APPLE)
+    # Settings common to both Mac and iOS
+    set(LIBSAT355_LANGUAGES Swift CXX)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -Wall -Wextra -Wpedantic -Wno-nonportable-include-path -Wno-unused-const-variable")
+    set(SWIFT_FLAGS "${SWIFT_FLAGS}  -cxx-interoperability-mode=default --version")
+    set(CMAKE_Swift_LANGUAGE_VERSION 5.9)
     if(IOS)
         # ios-specific compile settings
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -Wall -Wextra -Wpedantic -Wno-nonportable-include-path -Wno-unused-const-variable -miphoneos-version-min=8.0")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -miphoneos-version-min=8.0")
+        set(SWIFT_FLAGS "${SWIFT_FLAGS} ")
         set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS16.2.sdk")
         set(CMAKE_OSX_ARCHITECTURES "arm64")
     else()
         # Mac-specific compile settings
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -Wall -Wextra -Wpedantic -Wno-nonportable-include-path -Wno-unused-const-variable")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ")
+        set(SWIFT_FLAGS "${SWIFT_FLAGS} ")
         set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk")
     endif()
 endif()
 
-
 # c++ language version level: c++17
 set(CMAKE_CXX_STANDARD 17)
 # cmake project name: "libsat"
-project(libsat VERSION 0.1.0)
 
-include_directories(src)
+project(libsat VERSION 0.1.0 LANGUAGES ${LIBSAT355_LANGUAGES})
 
 # add CTest capability
 include(CTest)
@@ -74,19 +80,26 @@ endif()
 # Organizes project into folders to reduce clutter
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-# Include, build, and read Makefiles from all subdirectories
+# Adds /src to the header search path, so we can #include labsat355.h
+include_directories(src)
+# Invoke the build CMakeLists.txt instructions for libsat355
 add_subdirectory(src build)
+
+# Tell cmake how to place the output executable in a tidy place a client can find it
+if(NOT APPLE)
+    # Invoke the CMakeLists.txt build instructions for app355-cpp
+    add_subdirectory(app-cpp)
+    install(TARGETS app355-cpp DESTINATION out/app-cpp)
+else()
+    # Invoke the CMakeLists.txt build instructions for app-swift 
+    add_subdirectory(app-swift)
+    install(TARGETS app355-swift DESTINATION out/app-swift)
+endif()
+
+# Tell cmake how to place the output executable in a tidy place a client can find it
 if(NOT IOS)
-    add_subdirectory(app)
-    # enable testing
+# enable testing
     enable_testing()
     add_subdirectory(tests)
-
-
-# Tell cmake how to place the output executable in a tidy place a client can find it
-install(TARGETS app355 DESTINATION out/app)
-
-# Tell cmake how to place the output executable in a tidy place a client can find it
-install(TARGETS unit_tests DESTINATION out/tests)
-
+    install(TARGETS unit_tests DESTINATION out/tests)
 endif()
