--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,9 @@
             "request": "launch",
 
             "program": "${workspaceFolder}/lib/win-x64/app355-cpp",  
-            "args": ["${workspaceFolder}/tests/StarLinkTLE.txt"], 
+            "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
             "cwd": "${workspaceFolder}/lib/win-x64", // Change this to the directory of your executable
-            "stopAtEntry": true // Set to true to stop program execution at the first line of code
+            "stopAtEntry": false // Set to true to stop program execution at the first line of code
         },
 
         {
@@ -54,7 +54,7 @@
             
             //"args": [], // No Args
             //"cwd": "${workspaceFolder}/lib/win-x64", // Change this to the directory of your executable
-            "stopAtEntry": true, // Set to true to stop program execution at the first line of code
+            "stopAtEntry": false, // Set to true to stop program execution at the first line of code
             // MIMode indicates to VSCode which debugger should be used.
             // Can only be gdb or lldb.
         },
