--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
             "request": "launch",
 
             "program": "${workspaceFolder}/lib/win-x64/unit_tests",
-            "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"],
+            "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
             "cwd": "${workspaceFolder}/lib/win-x64",
             "stopAtEntry": false, // Set to true to stop program execution at the first line of code
             "preLaunchTask": "build", // tasks.json: {"label": "build"}
@@ -35,19 +35,20 @@
             
             "windows": {
                 "program": "${workspaceFolder}/lib/win-x64/app355-cpp",  
-                "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"], 
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/win-x64", 
                 "MIMode": "gdb"
             },
             "osx": {
-                "program": "${workspaceFolder}/lib/macos/app355-swift",  
-                "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"], 
+                //"program": "${workspaceFolder}/lib/macos/app355-swift",  
+                "program": "${workspaceFolder}/lib/macos/app355-cpp",  
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/macos",
                 "MIMode": "lldb"
             },
             "linux": {
                 "program": "${workspaceFolder}/lib/ios/unit_tests",  
-                "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"],
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/ios", 
                 "MIMode": "gdb"
             },
@@ -66,19 +67,19 @@
             
             "windows": {
                 "program": "${workspaceFolder}/lib/win-x64/unit_tests",  
-                "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"],
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/win-x64", 
                 "MIMode": "gdb"
             },
             "osx": {
                 "program": "${workspaceFolder}/lib/macos/unit_tests",  
-                "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"],
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/macos",
                 "MIMode": "lldb"
             },
             "linux": {
                 "program": "${workspaceFolder}/lib/ios/unit_tests",  
-                "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"],
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/ios", 
                 "MIMode": "gdb"
             },
