--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,9 @@
             "request": "launch",
 
             "program": "${workspaceFolder}/lib/win-x64/app355-cpp",  
-            "args": ["${workspaceFolder}/tests/StarLinkTLE.txt"], 
+            "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
             "cwd": "${workspaceFolder}/lib/win-x64", // Change this to the directory of your executable
-            "stopAtEntry": true // Set to true to stop program execution at the first line of code
+            "stopAtEntry": false // Set to true to stop program execution at the first line of code
         },
 
         {
@@ -22,32 +22,33 @@
             "request": "launch",
 
             "program": "${workspaceFolder}/lib/win-x64/unit_tests",
-            "args": [], // No Args
+            "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
             "cwd": "${workspaceFolder}/lib/win-x64",
             "stopAtEntry": false, // Set to true to stop program execution at the first line of code
             "preLaunchTask": "build", // tasks.json: {"label": "build"}
         },
 
         {
-            "name": "Launch/Debug (GDB)", 
+            "name": "Launch/Debug (GDB)",
             "type": "cppdbg", // Use GDB or LLDB debugger 
             "request": "launch",
             
             "windows": {
                 "program": "${workspaceFolder}/lib/win-x64/app355-cpp",  
-                "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"], 
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/win-x64", 
                 "MIMode": "gdb"
             },
             "osx": {
-                "program": "${workspaceFolder}/lib/macos/app355-swift",  
-                "args": ["${workspaceFolder}/tests/StarlinkTLE.txt"], 
+                //"program": "${workspaceFolder}/lib/macos/app355-swift",  
+                "program": "${workspaceFolder}/lib/macos/app355-cpp",  
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/macos",
                 "MIMode": "lldb"
             },
             "linux": {
                 "program": "${workspaceFolder}/lib/ios/unit_tests",  
-                "args": [], 
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/ios", 
                 "MIMode": "gdb"
             },
@@ -66,19 +67,19 @@
             
             "windows": {
                 "program": "${workspaceFolder}/lib/win-x64/unit_tests",  
-                "args": [], 
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/win-x64", 
                 "MIMode": "gdb"
             },
             "osx": {
                 "program": "${workspaceFolder}/lib/macos/unit_tests",  
-                "args": [], 
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/macos",
                 "MIMode": "lldb"
             },
             "linux": {
                 "program": "${workspaceFolder}/lib/ios/unit_tests",  
-                "args": [], 
+                "args": ["${workspaceFolder}/tests/TrainTestTLE.txt"], 
                 "cwd": "${workspaceFolder}/lib/ios", 
                 "MIMode": "gdb"
             },
